2009-11-07  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	Bump to pocc-1.0-beta-r3.

	* configure.ac,
	* doc/pocc.texi: Bump to pocc-1.0-beta-r3.

	* driver/pocc/driver-codegen.c: Remove duplicate fdclose.

2009-11-04  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* install.sh: Pass the path to GMP header to the driver
	configuration.

2009-10-28  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/driver-codegen.c: Add fclose calls where needed, to
	avoid exhausting the number of available file descriptor.

	* config/base/configure.cfg,
	* config/devel/configure.cfg,
	* config/irregular/configure.cfg: Specify --with-gmp-prefix for
	pluto to avoid missing header error when including cloog
	headers (which require GMP as now cloog-isl-gmp is the defaut
	generator.

	* bin/pocc-make: Fix a bug in the pocc-util make xxx invocation.

2009-10-23  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* doc/pocc.texi: Minor update of the documentation.

2009-10-22  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch improves the documentation and polishes the
	pretty-printing.

	* generators/scripts/ploog: Remove the ';;' at the end of
	instructions, such that we only have ';' at the end.
	* tests/tests/gemver/gemver.plutotileparunrollprev.c,
	* tests/tests/gemver/gemver.plutotileparunroll.c,
	* tests/tests/gemver/gemver.plutotile.c,
	* tests/tests/gemver/gemver.plutotilepar.c,
	* tests/tests/gemver/gemver.passthru.c,
	* tests/tests/dgemm/dgemm.passthru.c,
	* tests/tests/dgemm/dgemm.plutotileparunrollprev.c,
	* tests/tests/dgemm/dgemm.plutotileparunroll.c,
	* tests/tests/dgemm/dgemm.plutotile.c,
	* tests/tests/dgemm/dgemm.plutotilepar.c: Update accordingly.

	* bin/pocc-util.in: Add command pocc-util buildall, to build the
	compiler project from the current configuration.

	* bin/pocc-checkout: Fix a bug in checkout-svn method.

	* generators/scripts/inscop: Fix a potential bug in
	pretty-printing (remaining '\t' not interpreted).
