@@ -8,7 +8,7 @@
 
 @set EDITION 0.1
 @set VERSION 1.0-beta-r3
-@set UPDATED Novembert 7th 2009
+@set UPDATED November 7th 2009
 @setchapternewpage odd
 
 
